syntax = "proto3";

package auth.v1;

option go_package = "bookmymovie.app/bookmymovie/gen/auth/v1;authv1";

import "google/type/timestamp.proto";

message RequestLoginOTPRequest {
    string email = 1;
}

message RequestLoginOTPResponse {
    string login_token = 1;
}

message LoginRequest {
    string login_token = 1;
    string otp = 2;
}

message LoginResponse {
    string access_token = 1;
    string refresh_token = 2;
    google.protobuf.Timestamp access_token_expiry = 3;
}

message RefreshAccessTokenRequest {
}

message RefreshAccessTokenResponse {
    string access_token = 1;
    google.protobuf.Timestamp access_token_expiry = 2;
}

message LogoutRequest {
}

message LogoutResponse {
}

service AuthService {
    rpc RequestLoginOTP(RequestLoginOTPRequest) returns (RequestLoginOTPResponse);
    rpc Login(LoginRequest) returns (LoginResponse);
    rpc RefreshAccessToken(RefreshAccessTokenRequest) returns (RefreshAccessTokenResponse);
    rpc Logout(LogoutRequest) returns (LogoutResponse);
}